<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="e_g_john">e.g. Rajib</string>
    <string name="start">Start</string>
    <string name="what_country_does_this_flag_belong_to">What Country does this flag belong to?</string>
    <string name="submit">SUBMIT</string>
</resources>